--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "npm": ">=6.14.6"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -23,9 +24,9 @@
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5",
-    "nodemon": "^2.0.15"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
